samples/_failures_safe/1761243373_c388c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2df71f66.c: In function ‘main’:
./samples/SAFE/__tmp_2df71f66.c:162:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  162 |     LogProcessor processors[]
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_2df71f66.c:162:5: error: expected declaration or statement at end of input
